--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,54 +8,32 @@
     tools:context=".MainActivity">
 
 
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="261dp"
-            android:layout_height="96dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="@+id/labelInputTemperatureUnit"
-            app:layout_constraintTop_toBottomOf="@+id/labelInputTemperatureUnit">
+    <Button
+        android:id="@+id/buttonConvert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:onClick="action_convert"
+        android:text="@string/convert"
+        app:layout_constraintEnd_toStartOf="@+id/switchAutoConv"
+        app:layout_constraintHorizontal_bias="0.27"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editInputTemp" />
 
-            <RadioButton
-                android:id="@+id/rbCelsius"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="@string/celsius_c" />
-
-            <RadioButton
-                android:id="@+id/rbFahrenheit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/fahrenheit_f" />
-        </RadioGroup>
-
-        <Button
-            android:id="@+id/buttonConvert"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:onClick="action_convert"
-            android:text="@string/convert"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
-
-        <EditText
-            android:id="@+id/editInputTemp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="16dp"
-            android:ems="10"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/labelInputTemperature"
-            app:layout_constraintTop_toBottomOf="@+id/labelInputTemperature"
-            tools:ignore="SpeakableTextPresentCheck" />
+    <EditText
+        android:id="@+id/editInputTemp"
+        android:layout_width="206dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toStartOf="@+id/spinnerInput"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/labelInputTemperature"
+        app:layout_constraintTop_toBottomOf="@+id/labelInputTemperature"
+        tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
             android:id="@+id/labelResult"
@@ -67,31 +45,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonConvert" />
 
-        <TextView
-            android:id="@+id/dispResult"
-            android:layout_width="353dp"
-            android:layout_height="51dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:gravity="center"
-            android:text="@string/result"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/labelResult" />
+    <TextView
+        android:id="@+id/dispResult"
+        android:layout_width="181dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/result"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintEnd_toStartOf="@+id/spinnerOutput"
+        app:layout_constraintHorizontal_bias="0.23"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelResult" />
 
-        <TextView
-            android:id="@+id/labelInputTemperatureUnit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:text="@string/input_temperature_unit"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editInputTemp" />
-
-        <TextView
+    <TextView
             android:id="@+id/labelInputTemperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -104,8 +72,40 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="SpeakableTextPresentCheck" />
 
+    <Spinner
+        android:id="@+id/spinnerInput"
+        android:layout_width="104dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="24dp"
+        android:entries="@array/array_temp_unit"
+        app:layout_constraintBottom_toBottomOf="@+id/editInputTemp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/editInputTemp"
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="DuplicateSpeakableTextCheck" />
 
+    <Spinner
+        android:id="@+id/spinnerOutput"
+        android:layout_width="101dp"
+        android:layout_height="54dp"
+        android:layout_marginEnd="36dp"
+        android:entries="@array/array_temp_unit"
+        app:layout_constraintBottom_toBottomOf="@+id/dispResult"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/spinnerInput"
+        app:layout_constraintTop_toTopOf="@+id/dispResult"
+        app:layout_constraintVertical_bias="0.0" />
 
+    <Switch
+        android:id="@+id/switchAutoConv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="60dp"
+        android:text="@string/switch_auto_convert"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonConvert"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/buttonConvert" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
